force-app/main/default/objects/Combine_Document__e/Combine_Document__e.object-meta.xml
<CustomObject>
    <label>Combine Document</label>
    <pluralLabel>Combine Documents</pluralLabel>
</CustomObject>