force-app/main/default/objects/Combine_Document__e/fields/New_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Document_Name__c</fullName>
    <label>New Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>