force-app/main/default/objects/Combine_Document__e/fields/Owner_Slack__c.field-meta.xml
<CustomField>
    <fullName>Owner_Slack__c</fullName>
    <label>Owner Slack</label>
    <length>20</length>
    <type>Text</type>
</CustomField>