force-app/main/default/objects/Combine_Document__e/fields/Second_Document__c.field-meta.xml
<CustomField>
    <fullName>Second_Document__c</fullName>
    <label>Second Document</label>
    <length>18</length>
    <type>Text</type>
</CustomField>